views/styles.sass
$font-stack: sans-serif
$primary-color: #333333

$header-height: 30px
$footer-height: 15vh

=border-radius($radius)
  -webkit-border-radius: $radius
  -moz-border-radius: $radius
  -ms-border-radius: $radius
  border-radius: $radius

html,
body,
.main
  font-family: $font-stack
  color: $primary-color
  width: 100%
  height: 100vh
  margin: 0
  padding: 0
  overflow: hidden

.main
  background: url('img/main/bg.jpg')
  background-size: cover
  background-position: center

.header
  display: block
  position: fixed
  height: $header-height
  width: 100%
  background: rgba(100, 100, 100, 0.5)

div.content
  display: table
  width: 75%
  max-width: 700px
  height: calc(100% - #{$header-height})
  margin: $header-height auto 0
  text-align: center

  .gateway
    display: table-cell
    width: 100%
    text-align: center
    vertical-align: middle

    .category-viewer-placeholder
      $cat-viewer-height: 40vh
      $cat-viewer-ph-height: 50vh
      height: $cat-viewer-ph-height

      .category-viewer
        box-sizing: border-box
        position: absolute
        left: 0
        width: 95%
        margin: 0 2.5%
        margin-top: calc((#{$cat-viewer-ph-height} - #{$cat-viewer-height})/2) //vertically center div within placeholder div
        white-space: nowrap
        overflow: hidden

div.category
  box-sizing: border-box
  width: 175px
  height: 40vh
  display: inline-block
  background: lightgray
  margin: 0 10px
  font-size: 1em

  &#cat-social
    background: url('img/category_bg/social.jpg')
    background-size: cover

  //&#cat-programming
    //background: url('img/category_bg/programming.jpg')
    //background-size: cover

  p
    box-sizing: border-box
    float: left
    padding: 5px 10px
    margin: 0
    color: white
    background: rgba(50, 50, 50, 0.75)

div.search
  $sb-height: 35px
  $lr-margin: 10px
  $lo-color: rgba(255, 255, 255, 0.5)
  $hi-color: rgba(255, 255, 255, 0.85)
  height: $sb-height
  width: 100%
  max-width: 700px
  display: inline-block
  margin: 0 $lr-margin 1.5em
  text-align: left
  background: $lo-color
  &.search-focused
    outline: none
    background: $hi-color
    width: calc(100% - #{$sb-height} - 2*#{$lr-margin})
    transform: translateY(-3px)
    -webkit-box-shadow: 5px 4px 5px -1px rgba(0,0,0,0.5)
    -moz-box-shadow: 5px 4px 5px -1px rgba(0,0,0,0.5)
    box-shadow: 5px 4px 5px -1px rgba(0,0,0,0.5)

  &:hover
    background: $hi-color

  #search-left, input
    -moz-box-sizing: border-box
    -webkit-box-sizing: border-box
    box-sizing: border-box

  #search-left
    float: left
    width: $sb-height
    height: 100%
    display: inline-block

  input
    box-sizing: border-box
    display: inline-block
    height: 100%
    width: 200px
    border: none
    background: transparent
    font-size: 1em
    font-style: italic
    padding: 5px 10px
    color: #4d4d4d
    transition: width 0.3s, transform 0.3s


div.shortcut-bar-wrapper
  height: 10vh
  width: 100%
  margin: 1.5em 0 0

div.shortcut-bar
  display: flex
  justify-content: space-between
  width: 100%
  max-width: 700px
  height: 100%
  padding: 0 10px
  box-sizing: border-box
  margin: 0 auto

  .shortcut
    display: inline-block
    width: 10vh
    height: 10vh
    box-sizing: border-box
    padding: 10px
    //dev
    background: rgba(255, 255, 255, 0.5)

.footer
  position: fixed
  bottom: 0
  left: 0
  display: block
  width: 100%
  height: $footer-height

  &::after
    content: ""
    background: linear-gradient(to bottom, transparent, black)
    opacity: 0.75
    top: 0
    left: 0
    bottom: 0
    right: 0
    position: absolute
    z-index: -1

